--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -30,7 +30,7 @@
     display: grid;
     grid-template-columns: auto 1fr;
     column-gap: 1rem;
-    row-gap: 10px;
+    row-gap: 1rem;
 
     margin-top: 1rem;
     
